homework_6/css/style.css
body {
  font-family: "Courier Prime", monospace;
  font-weight: 400;
  font-style: normal;
  line-height: 1.5;
}
/* ! HEADER */

.header {
  background: linear-gradient(
    152deg,
    rgba(0, 0, 0, 0.01) 0%,
    rgba(148, 187, 233, 1) 100%
  );
  padding: 10px 10px 30px 10px;
}
.menu {
  margin-bottom: 30px;
}

.menu-list-item {
  text-transform: uppercase;
  max-width: 200px;
  background-color: #d5ccdc;
  border-radius: 5px 0px;
  padding: 3px;
  margin-left: auto;
  margin-bottom: 5px;
  box-shadow: 0px 2px 2px 0px #615967;
}
h1,
h2 {
  font-style: italic;
  font-weight: 700;
  font-size: 30px;
  text-align: center;
  color: #463e4b;
  text-shadow:
    1px 1px 2px #faf4ff,
    5px -3px 5px rgb(137, 19, 228),
    3px -1px 3px #3b3441;
}
h2 {
  color: #020024;
}

/* ! MAIN */

.block-info {
  background-image: url("../image/google.png");
  opacity: 0.8;
  padding: 10px;
  background-attachment: fixed;
}
.box,
.border-style,
.sumborder {
  margin-bottom: 20px;
}
.box1 {
  background-color: #fbf9fd;
  border: 10px solid #463e4b;
  padding: 20px;
  margin: 10px;
  opacity: 1;
}
.box2 {
  background-color: #fbf9fd;
  outline: 10px solid #dad3de;
  padding: 20px;
  margin: 10px 10px 30px 10px;
  opacity: 1;
}
.box3 {
  background-color: #fbf9fd;
  border: 10px solid #463e4b;
  outline: 10px solid #dad3de;
  padding: 20px;
  margin: 10px 10px 0px 10px;
  opacity: 1;
}

.border-style1 {
  max-width: 150px;
  background-color: #d18ffd;
  border-left: 4px dotted #403946;
  padding: 15px;
  border-radius: 25px 0px;

  margin-left: 20px;
  margin-right: auto;
}
.border-style2 {
  text-align: center;
  max-width: 150px;
  background-color: #bda5cf;
  border: 5px double #403946;
  border-radius: 10px;
  opacity: 0.8;
  margin-left: 40px;
  margin-top: -30px;
  margin-right: auto;
}
.border-style3 {
  text-align: center;
  padding: 10px;
  max-width: 150px;
  background-color: #b0b0b0;
  border: 5px dashed #403946;
  border-radius: 25%;
  margin-top: -35px;
  margin-right: auto;
  margin-bottom: -35px;
  margin-left: 60px;
}
.border-style4 {
  text-align: center;
  padding: 10px;
  width: 250px;
  background-color: #c59de2;
  border: 5px dashed #403946;
  border-radius: 50%;
  border-color: transparent;
  opacity: 0.9;
  margin-left: 80px;
  margin-right: auto;
  margin-bottom: 10px;
}
.border-style5 {
  padding: 10px;
  color: #dad3de;
  background: linear-gradient(
    90deg,
    rgba(2, 0, 36, 1) 3%,
    rgba(9, 9, 121, 1) 25%,
    rgba(0, 212, 255, 1) 67%
  );
  box-shadow:
    inset 0px 0px 10px 10px #020024,
    0px 0px 5px 5px rgba(148, 187, 233, 1);
  border-top: 5px solid #08f3fa;
  border-right: 12px dotted #726a79;
  border-bottom: 8px dashed green;
  border-left: 14px double #9fb4ba;
  border-bottom-left-radius: 20px;
  margin-bottom: 10px;
}
.border-style6 {
  padding: 10px;
  background: #fff;
  box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.4);
  margin-bottom: 10px;
}
.block1,
.block2,
.block3,
.block4,
.block5 {
  padding: 20px;
  background-image: url(../image/google.png);
  background-size: auto 50px;
  border: 1px double #3b3441;
  opacity: 0.9;
}
.block1 {
  margin-bottom: 10px;
}
.block2 {
  height: 200px;
  background-repeat: no-repeat;
  background-position: center;
  overflow: scroll;
  margin-bottom: 10px;
}
.block3 {
  background-repeat: repeat-x;
  background-position: 0 bottom;
  margin-bottom: 10px;
}
.block4 {
  background-repeat: repeat-y;
  background-position: right;
  margin-bottom: 10px;
}
.block5 {
  color: #fff;
  background:
    url("../image/google.png") no-repeat right bottom / 200px,
    linear-gradient(
      55.95deg,
      rgba(255, 64, 58, 0.001) 0%,
      rgba(247, 94, 5, 0.3) 100%
    ),
    url("../image/photo.jpeg") no-repeat right top / 600px;
  text-decoration: underline;
  text-transform: capitalize;
  text-shadow: 1px 1px 1px #020024;
}

/* ! FIGMA_HW */

.block-task {
  padding: 10px;
  margin-bottom: 10px;
}
/* task1 */
.task1 {
  margin-bottom: 20px;
}
.header-task1 {
  text-align: center;
  color: #000000;
  font-family: Poppins, sans-serif;
  font-weight: 500;
  padding-top: 61px;
  padding-bottom: 97px;
  background-image: url("../image/Rectangle.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.content-task1 {
  margin: 0 auto;
  max-width: 233px;
  margin-bottom: 1px;
}
.logo {
  max-width: 77px;
}
.content-task1 h3 {
  font-size: 48px;
  line-height: 1.5; /* 72/48 */
}
.task1 p {
  font-weight: 300;
  margin: 0 auto;
  
}
.task1 p span {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5; /* 24/16 */
}
.arrow {
  margin-right: 6px;
  margin-left: 6px;
  max-width: 20px;
  height: auto;
}

/* task2 */

.task2 {
  font-family: Barlow, sans-serif;
  font-weight: 400;
  background-color: #030303;
}
.header-task2 {
  padding-top: 94px;
  text-align: center;
  background-image: url("../image/bg2.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.title-task2 {
  text-transform: uppercase;
  font-weight: 800;
  font-size: 64px;
  line-height: 1.5;
  color: #f9efec;
  margin-bottom: 17px;
}
.bottom-task2 {
  font-family: "Roboto Flex", sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  color: #ffffff;
  background-color: #0a84ff;
  margin-bottom: 85px;
  padding: 13px 26px;
  border-radius: 12px;
  min-width: 235px;
}
.container {
  padding: 35px;
}
.content-task2 {
  font-weight: 400;
  font-size: 16px;
  color: #b3b3b2;
  line-height: 1.5;
  background-color: #1a1a1a;
  padding: 32px;
  border-radius: 12px;
}
.subcontent1,
.subcontent2,
.subcontent3, .subcontent1 p,
.subcontent4 p {
  margin-bottom: 24px;
}
#subcontent4-last-p,
#subcontent1-last-p {
  margin-bottom: 0px;
}
.subcontent2 li,
.subcontent3 li {
  margin-bottom: 10px;
  background: url("../image/item2.png") 0 3px no-repeat;
  padding-left: 26px;
  padding-top: 2px;
}

.content-task2 h5 {
  font-weight: 500;
  font-size: 24px;
  text-transform: uppercase;
  color: #f9efec;
  margin-bottom: 12px;
}

.links {
  font-family: Poppins, sans-serif;
  font-style: italic;
  font-weight: 300;
  max-width: 80%;
  padding: 5px;
  margin-right: auto;
  margin-left: 50px;
  background-color: #fbf9fd;
  border-left: 5px solid #d18ffd;
  box-shadow: 5px 5px 10px 5px rgba(209, 143, 253, 0.906);
  margin-bottom: 10px;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
}
.links h2 {
  font-weight: 700;
  font-size: 18px;
  font-style: normal;
  text-align: center;
  margin-bottom: 5px;
}
.links h3 {
  font-weight: 600;
  font-size: 18px;
  font-style: normal;
}
.links ul li {
  padding-left: 10px;
}
.links ol li {
  padding-left: 30px;
}
[target] {
  margin-bottom: 10px;
  background-image: url("/image/link.svg");
  background-position: 0 0;
  background-repeat: no-repeat;
  padding-left: 6px;
  background-size: 15px;
  min-height: 15px;
  padding-left: 20px;
}
[target]:focus {
  padding-right: 5px;
  background-color: #c59de2;
  font-weight: 600;
  outline: 2px solid #08f3fa;
  color: #08f3fa;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
}

/* ! FOOTER */
footer {
  text-align: center;
  background: linear-gradient(
    152deg,
    rgba(0, 0, 0, 0.01) 0%,
    rgba(148, 187, 233, 1) 100%
  );
  padding: 30px 10px;
}
.button {
  text-align: center;
  text-transform: uppercase;
  max-width: 100px;
  background-color: #d5ccdc;
  border-radius: 5px;
  padding: 10px;
  box-shadow: 5px 5px 5px 5px #615967;
  transform: translateY(3px);
  transition: all 0.3s;
}

